# cpp-hw

./: CMakeLists.txt  avl_tree.h  big_integer.cpp  big_integer.h  big_integer_testing.cpp  bimap.h  bind.h  compare.sh  huffman.cpp  huffman.h  huffman_encoder.h  persistent_set.h  test.cpp  test.sh  unit_test.cpp  util.h  variant.h  variant_ext.h
big_int/: big_integer.cpp  big_integer.h
big_integer/big_int/: big_integer.h
bimap/: avl_tree.h  bimap.h
bind/: CMakeLists.txt
huffman_encoder/: huffman_encoder.cpp  test.cpp  test.sh
huffman_encoder/samples/: lorem.txt  random.txt
persistent_set/: CMakeLists.txt
persistent_set/smart_pointers/: shared_ptr.h
samples/: small.txt
smart_pointers/: linked_ptr.h  shared_ptr.h
variant/: util.h
vector/: vector.h
